set up most of UI for the extension popup but need to finish up there and then set up and connect logic to background scripts and content scripts plus figure out data sourcing and storage

--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .balances-box {
   min-height: max-content;
   background-color: #e8ebfe;
