--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -1,34 +1,43 @@
 .App {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
   text-align: center;
+  padding: 10px;
+}
+
+.App-logo {
+  height: 30vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-  background-color: #282c34;
-  padding: 20px;
-  color: white;
-}
-
-form {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
-}
-
-input,
-button {
-  padding: 10px;
-  border-radius: 5px;
-  border: none;
-  font-size: 16px;
-}
-
-button {
-  background-color: #61dafb;
-  cursor: pointer;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-button:hover {
-  background-color: #52c8ea;
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
