--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,6 +1,10 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 body {
-  width: 300px;
-  height: 260px;
+  width: 400px;
+  height: 800px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
